k8s/components/db/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: db
  labels:
    app.kubernetes.io/managed-by: argocd
    homelab/cluster: homelab
    homelab/env: prod
    homelab/stack: database
